--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydbtest1
+spring.datasource.username=root
+spring.datasource.password=DragonSerg
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.open-in-view = false
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.mvc.hiddenmethod.filter.enabled=true
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.main.allow-circular-references= true
+hibernate.enable_lazy_load_no_trans" value="true"
+
+server.port=3031
